@@ -1,3 +1,8 @@
+Sat Dec  4 23:07:00 2004  John Tytgat  <John.Tytgat@aaug.net>
+
+	* source/unix/select.c: Norcroft compatibility; unsigned modulo
+	  instead of signed for better code.
+
 Sat Dec  4 15:10:37 2004  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/pwd/pwdread.c (__pwddefault): Prevent potential NULL
